feat(upgrade): 升级至 Spring Boot 4.1.0 + JDK 21
- pom.xml: java.version/maven.compiler.release 17->21
- pom.xml: spring-boot.version 3.5.16->4.1.0
- ypbin-admin-common: mica-ip2region 3.5.7->4.1.0
- application.yml: spring.threads.virtual.enabled=true（虚拟线程）
- AdminDataScopeHandler: old switch -> arrow-switch
- SecurityBootstrapService: List.get(0) -> getFirst()
- SysMenuServiceImplTest: get(0) -> getFirst()
- Dockerfile: eclipse-temurin:17-jre -> 21-jre + 分代 ZGC
- deploy.sh: JDK 探测优先 java-21，安装优先 openjdk-21